kubernetes/apps/homepage/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https-domain-gateway
    - name: external
      namespace: gateway
      sectionName: https-domain-gateway
  hostnames:
    - ${cluster_domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homepage
          port: 80
          weight: 1
